--- a/kinect_bridge/log.properties
+++ b/kinect_bridge/log.properties
@@ -1,4 +1,4 @@
-ppenders										       #
+# appenders										       #
 ########################################################################################################
 # configure appender called "console" as "console appender"
 log4cplus.appender.console=log4cplus::ConsoleAppender
@@ -33,4 +33,8 @@ log4cplus.rootLogger=ERROR, console
 
 
 log4cplus.logger.KinectBridgeServer=TRACE, console
+log4cplus.logger.KinectBridgeClient=TRACE, console
+log4cplus.logger.KinectBridge=TRACE, console
+log4cplus.logger.KinectBridgeBuffer=TRACE, console
+log4cplus.logger.TestBuffer=TRACE, console
 
