--- a/kinect_bridge/test/CMakeLists.txt
+++ b/kinect_bridge/test/CMakeLists.txt
@@ -1,12 +1,29 @@
 # export parameters for a boost test case call
 SET(ENV{BOOST_TEST_PARAMS} "-l all -r detailed")
 
+#####################################
+###### test_cvmatserialization ######
+#####################################
+
 add_executable(test_cvmatserialization
 	test_cvmatserialization.cpp
 )
 
 target_link_libraries(test_cvmatserialization
 	${Boost_LIBRARIES}
+	nestk
+	kinect_bridge
+)
+
+#####################################
+########### test_package ############
+#####################################
+
+add_executable(test_package
+	test_package.cpp
+)
+
+target_link_libraries(test_package
 	nestk
 	kinect_bridge
 )
@@ -22,3 +39,22 @@ ADD_TEST(CvMatSerialization::loadJpegSaveSerializedCompressed
 ADD_TEST(CvMatSerialization::loadSerializedCompressedConvertToIplAndDisplay
     "${CMAKE_CURRENT_SOURCE_DIR}/run_test_cvmatserialization.sh" "test_CvMatSerialization" "loadSerializedCompressedConvertToIplAndDisplay")
 
+ADD_TEST(Package::copyPackageCheckVersion
+    "${CMAKE_CURRENT_SOURCE_DIR}/run_test_package.sh" "Package" "copyPackageCheckVersion")
+
+
+#####################################
+########### test_buffer ############
+#####################################
+
+add_executable(test_buffer
+	test_buffer.cpp
+)
+
+target_link_libraries(test_buffer
+	nestk
+	kinect_bridge
+)
+
+ADD_TEST(Buffer::storePackageGetCheckVersion
+    "${CMAKE_CURRENT_SOURCE_DIR}/run_test_package.sh" "Buffer" "storePackageGetCheckVersion")
