Add mutable circular buffer.
Signed-off-by: flozzone <flozzone@gmail.com>

--- a/kinect_bridge/test/CMakeLists.txt
+++ b/kinect_bridge/test/CMakeLists.txt
@@ -58,3 +58,6 @@ target_link_libraries(test_buffer
 
 ADD_TEST(Buffer::storePackageGetCheckVersion
     "${CMAKE_CURRENT_SOURCE_DIR}/run_test_package.sh" "Buffer" "storePackageGetCheckVersion")
+ADD_TEST(Buffer::storePackageGetCheckVersionBoundedBuffer
+    "${CMAKE_CURRENT_SOURCE_DIR}/run_test_package.sh" "Buffer" "storePackageGetCheckVersionBoundedBuffer")
+
