Switch to opencv lib instead of nestk in client.
Signed-off-by: flozzone <flozzone@gmail.com>

--- a/kinect_bridge/CMakeLists.txt
+++ b/kinect_bridge/CMakeLists.txt
@@ -65,7 +65,8 @@ ADD_EXECUTABLE(kinect_bridge_client
 TARGET_LINK_LIBRARIES(kinect_bridge_client
 	kinect_bridge
 	boost_system
-	nestk
+	opencv_core
+	opencv_highgui
 )
 
 #######################################
