Use cmakes debug definition.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ PROJECT(kinect-bridge)
 
 ENABLE_TESTING()
 
+SET(CMAKE_BUILD_TYPE Debug)
+
 SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH})
 
 SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
@@ -13,7 +15,7 @@ SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
 SET(NESTK_USE_FREENECT 0)
 SET(NESTK_USE_OPENNI 1)
 
-add_definitions( "-g" )
+#add_definitions( "-g" )
 
 ADD_SUBDIRECTORY(external)
 ADD_SUBDIRECTORY(kinect_bridge)
