Make kinect_bridge library be linked statically.

--- a/kinect_bridge/CMakeLists.txt
+++ b/kinect_bridge/CMakeLists.txt
@@ -55,7 +55,7 @@ set(kinect_bridge_SOURCES
 	package_buffer.cpp
 )
 
-add_library(kinect_bridge
+add_library(kinect_bridge STATIC
 	${kinect_bridge_HEADERS}
 	${kinect_bridge_SOURCES}
 )
