Reenable TimeProfiler with log4cplus timehelper.
Signed-off-by: flozzone <flozzone@gmail.com>

--- a/kinect_bridge/log.properties
+++ b/kinect_bridge/log.properties
@@ -37,4 +37,5 @@ log4cplus.logger.KinectBridgeClient=TRACE, console
 log4cplus.logger.KinectBridge=TRACE, console
 log4cplus.logger.KinectBridgeBuffer=TRACE, console
 log4cplus.logger.TestBuffer=TRACE, console
+log4cplus.logger.KinectBridgeDebug=TRACE, console
 
